# server

./: .gitmodules  Cargo.toml  README.md  installed.md
entity/src/: models.rs
entity/src/models/: Player.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20220704_165625_create_player_table.rs
src/: main.rs  parser.rs
src/database/: mod.rs
src/database/models/: Player.rs  mod.rs
src/server/: api.rs  mod.rs
