[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
entity = { path = "entity" }
migration = { path = "migration" }

async-graphql = "4.0.4"
async-graphql-poem = "4.0.4"
juniper = "0.15.9"
poem = { version = "1.3.32", features = ["static-files"] }
tokio = { version = "1.19.2", features = ["full"] }
sea-orm = { version = "^0", features = [ "sqlx-sqlite", "runtime-tokio-native-tls", "macros"] }
dirs = "4.0.0"
